--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -1,8 +1,105 @@
-.heading{
-    color: red;
-    font-size: 50px;
-    font-weight: bold;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 img{
     width: 100%;
+}
+a{
+    display: inline-block;
+    color: inherit;
+    text-decoration: inherit;
+    height: 100%;
+}
+a:hover{
+    color: inherit;
+    text-decoration: inherit;
+}
+input{
+    border: inherit;
+    background-color: inherit;
+}
+
+.content{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+header{
+    margin-top: 32px;
+    font-family: 'Oswald', sans-serif;
+}
+.logo{
+    width: 225px;
+    height: 79px;
+    background-color: #da5550;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+}
+.logo-img{
+    width: 175px;
+    margin-top: 7px;
+}
+.header-social{
+    display: flex;
+    justify-content: end;
+    position: absolute;
+    top: -25px;
+    right: 5px;
+}
+.social-icon{
+    width: 15px;
+    height: 15px;
+    margin-left: 15px;
+}
+.icon-social{
+    color: #ec5f5f;
+}
+.header-menu{
+    display: flex;
+    gap: 10px;
+    justify-content: end;
+    background-color: #ec5f5f;
+    height: 57px;
+}
+.menu-area{
+    position: relative;
+}
+.menu-item{
+    height: 100%;
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 15px;
+}
+.menu-item:hover {
+    background-color: #ef7474;
+}
+.menu-search-bar{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.search-bar{
+    background-color: #e7e5e5;
+    width: 160px;
+    height: 28px;
+    padding-left: 5px;
+    border-radius: 10px;
+    border: 1px solid #b6b5b5;
+}
+.search-icon{
+    position: absolute;
+    right: 5px;
+    top: 15px;
+}
+.icon-search{
+    color: #b6b5b5;
 }
