--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -108,6 +108,14 @@ header{
 
 /* NAVIGATION */
 
+.sticky-nav{
+    position: fixed;
+    top: 0px;
+    width: 100%;
+}
+.sticky-nav + main{
+    padding-top: 40px;
+}
 .navigation{
     height: 40px;
     background-color: #504f4f;
@@ -328,7 +336,11 @@ main{
 
 /* SECONDARY SECTION */
 
-
+.secondary-section{
+    display: flex;
+    gap: 13px;
+    align-items: flex-start;
+}
 
 /* LISTED SECTION */
 
@@ -337,6 +349,7 @@ main{
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
+    align-content: center;
 }
 .listed-card{
     width: 192px;
@@ -354,4 +367,70 @@ main{
 }
 .listed-title:hover{
     color: #ed4848;
+}
+
+/* SIDE SECTION */
+
+.side-section{
+    width: 278px;
+}
+.recommend-section{
+    border-radius: 3px;
+    border: 1px solid #e4e3e3;
+    overflow: hidden;
+}
+.recommend-heading{
+    color: #8c8d8c;
+    font-size: 13px;
+    font-weight: bold;
+    background-color: #dedede;
+    height: 33px;
+    padding-left: 15px;
+    padding-top: 8px;
+}
+.recommend-container{
+    padding-top: 11px;
+    padding-bottom: 11px;
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+    background-color: #efefef;
+}
+.recommend-card{
+    width: 256px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.recommend-content{
+    display: flex;
+    gap: 10px;
+}
+.recommend-img{
+    width: 80px;
+    height: 52px;
+    padding: 2px 2px 2px 2px;
+    border: 1px solid #d3d1d1;
+}
+.recommend-title{
+    color: #636463;
+    font-size: 12px;
+    font-weight: 700;
+    width: 166px;
+}
+.recommend-wall{
+    height: 1px;
+    width: 256px;
+    background-color: #d3d1d1;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.magazine-heading{
+    background-color: #585858;
+    color: white;
+    font-size: 13px;
+    font-weight: bold;
+    height: 33px;
+    text-align: center;
+    padding-top: 8px;
 }
