--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -174,7 +174,7 @@ footer{
     margin-top: 10px;
 }
 .footer-main{
-    background-color: #747373;
+    background-color: #525252;
     padding-bottom: 24px;
 }
 .footer-main-logo{
@@ -475,4 +475,68 @@ main{
     color: white;
     text-align: center;
     margin-top: 25%;
+}
+
+/* RECENT SECTION */
+
+.recent-section{
+    margin-top: 21px;
+}
+.recent-heading{
+    width: 100%;
+    height: 35px;
+    background-color: #c4c3c3;
+    position: relative;
+    margin-bottom: 16px;
+}
+.recent-heading-text{
+    position: absolute;
+    height: 100%;
+    background-color: #d21a32;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 8px;
+}
+.recent-card{
+    display: flex;
+    gap: 15px;
+    background-color: #f4f3f3;
+    border: 1px solid #ededed;
+}
+.recent-img{
+    width: 310px;
+}
+.recent-title{
+    font-size: 20px;
+    color: #393838;
+    font-weight: 700;
+    width: 350px;
+    margin-bottom: 15px;
+    margin-top: 8px;
+    transition: 0.2s;
+}
+.recent-title:hover {
+    color: #ed4848;
+}
+.recent-subtitle{
+    width: 350px;
+    font-size: 13px;
+    color: #7f7d7d;
+    margin-bottom: 15px;
+}
+.recent-info{
+    width: 350px;
+    font-size: 13px;
+    color: #7f7d7d;
+}
+.recent-author{
+    color: #c71b28;
+    font-size: 13px;
+    font-weight: 700;
+}
+.recent-author:hover{
+    color: #c71b28;
 }
