--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -270,7 +270,7 @@ main{
 }
 .ad-sticky{
     position: sticky;
-    top: 32px;
+    top: 64px;
 }
 
 /* MAIN SECTION */
@@ -502,6 +502,12 @@ main{
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 8px;
+}
+.recent-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
 }
 .recent-card{
     display: flex;
