--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+button{
+    background-color: inherit;
+    border: inherit;
+    color: inherit;
+}
 img{
     width: 100%;
 }
@@ -508,6 +513,7 @@ main{
     display: flex;
     flex-direction: column;
     gap: 18px;
+    margin-bottom: 13px;
 }
 .recent-card{
     display: flex;
@@ -552,4 +558,13 @@ main{
 }
 .recent-author:hover{
     color: #c71b28;
+}
+.recent-viewmore{
+    font-size: 14px;
+    color: white;
+    text-align: center;
+    background-color: #ec5f5f;
+    border: 1px solid #ce1328;
+    width: 100%;
+    height: 37px;
 }
