--- a/public/Css/detail.css
+++ b/public/Css/detail.css
@@ -16,7 +16,6 @@ a{
     display: inline-block;
     color: inherit;
     text-decoration: inherit;
-    height: 100%;
 }
 a:hover{
     color: inherit;
@@ -367,6 +366,13 @@ main{
     font-weight: 700;
 }
 
+/* PRIMARY SECTION */
+
+.primary-section{
+    display: flex;
+    gap: 18px;
+}
+
 /* RELATED SECTION */
 
 .sticky-related{
@@ -432,4 +438,39 @@ main{
 }
 .related-card-title:hover{
     color: #ed4848;
+}
+
+/* DETAIL SECTION */
+
+.detail-section{
+    width: 503px;
+}
+.detail-subtitle{
+    color: #525050;
+    font-size: 15px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.detail-thumbnail{
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.detail-para{
+    font-family: 'Times New Roman', Times, serif;
+    color: #333333;
+    font-size: 17px;
+    line-height: 23px;
+    margin-top: 14px;
+    margin-bottom: 14px;
+}
+.detail-img-subtitle{
+    width: 100%;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #e9e9e9;
+    color: #333333;
+    font-size: 14px;
+    font-style: italic;
+    padding-top: 9px;
+    padding-bottom: 9px;
 }
