--- a/public/Css/detail.css
+++ b/public/Css/detail.css
@@ -16,6 +16,7 @@ a{
     display: inline-block;
     color: inherit;
     text-decoration: inherit;
+    height: 100%;
 }
 a:hover{
     color: inherit;
@@ -29,6 +30,13 @@ input{
     width: 1000px;
     margin-left: auto;
     margin-right: auto;
+}
+.section-wall{
+    width: 100%;
+    height: 1px;
+    background-color: #dad9d9;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* HEADER */
@@ -562,4 +570,89 @@ main{
 }
 .similar-title:hover{
     color: #ed4848;
+}
+
+/* RECENT SECTION */
+
+.recent-section{
+    margin-top: 21px;
+}
+.recent-heading{
+    width: 100%;
+    height: 35px;
+    background-color: #c4c3c3;
+    position: relative;
+    margin-bottom: 16px;
+}
+.recent-heading-text{
+    position: absolute;
+    height: 100%;
+    background-color: #d21a32;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 8px;
+}
+.recent-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    margin-bottom: 13px;
+}
+.recent-card{
+    display: flex;
+    gap: 15px;
+    background-color: #f4f3f3;
+    border: 1px solid #ededed;
+}
+.recent-img{
+    width: 310px;
+    display: block;
+}
+.recent-img-link{
+    display: block;
+}
+.recent-title{
+    font-size: 20px;
+    line-height: 25px ;
+    color: #393838;
+    font-weight: 700;
+    width: 350px;
+    margin-bottom: 15px;
+    margin-top: 8px;
+    transition: 0.2s;
+}
+.recent-title:hover {
+    color: #ed4848;
+}
+.recent-subtitle{
+    width: 350px;
+    font-size: 13px;
+    color: #7f7d7d;
+    margin-bottom: 15px;
+}
+.recent-info{
+    width: 350px;
+    font-size: 13px;
+    color: #7f7d7d;
+}
+.recent-author{
+    color: #c71b28;
+    font-size: 13px;
+    font-weight: 700;
+}
+.recent-author:hover{
+    color: #c71b28;
+}
+.recent-viewmore{
+    font-size: 14px;
+    color: white;
+    text-align: center;
+    background-color: #ec5f5f;
+    border: 1px solid #ce1328;
+    width: 100%;
+    height: 37px;
 }
